--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           
         padding: 10px 20px;
         background-color: #ffffff; 
-        color: rgb(38, 212, 38); 
+        color: rgb(206, 115, 35); 
         border: none;
         border-radius: 5px;
         cursor: pointer;
@@ -58,7 +58,7 @@
 }
 
 body{
-    background-color: rgba(194, 237, 37, 0.701);
+    background-color: rgb(103, 211, 195);
 }
         
 
