--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <style>
         .h1{
-            font-size: 40px;
+            font-size: 41px;
             font-family: 'Raleway', sans-serif;
             margin-left: 11.7em;
         }
@@ -34,9 +34,9 @@
           
         padding: 10px 20px;
         background-color: #ffffff; 
-        color: rgb(206, 115, 35); 
+        color: rgb(0, 0, 0); 
         border: none;
-        border-radius: 5px;
+        border-radius: 7px;
         cursor: pointer;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
         transition: background-color 0.3s ease; 
@@ -58,7 +58,8 @@
 }
 
 body{
-    background-color: rgb(103, 211, 195);
+    background: rgb(82,98,236);
+background: radial-gradient(circle, rgba(82,98,236,1) 0%, rgba(17,230,255,1) 50%);
 }
         
 
